--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: d1b4ba4165502a3f8c42b272c3de5e6ce96275f1
+  github_token: $GITHUB_TOKEN
   local_dir: web-components/build
   on:
     branch:
