--- a/.gitignore
+++ b/.gitignore
@@ -100,10 +100,8 @@ bower_components
 build/Release
 
 # Dependency directories
-.vscode/
 node_modules/
 jspm_packages/
-build/
 
 # Typescript v1 declaration files
 typings/
@@ -132,6 +130,7 @@ bower_components/
 *.log
 
 dist/
+build/
 
 #### eslint ####
 # These rules are required to lint .eslintrc.js and friends.
@@ -147,3 +146,5 @@ flow-typed/
 docs/_book/
 jest_*/
 .jscpd/
+.idea
+.vscode
