--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
 		"cross-env": "^6.0.3",
 		"node-sass": "^4.13.0",
 		"prop-types": "^15.7.2",
-		"react": "^16.11.0",
-		"react-dom": "^16.11.0",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
 		"react-redux": "^7.1.1",
 		"react-router-dom": "^5.1.2",
+		"react-router-transition": "^2.0.0",
 		"react-scripts": "^3.2.0",
 		"redux": "^4.0.4",
 		"redux-devtools-extension": "^2.13.8",
