fixing repo name in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "2019-2-Track-Frontend-K-Chekanov",
-  "homepage": "https://your_gh_login.github.io/your_repo_name",
+  "name": "track-mail-2019-kichyr",
+  "homepage": "https://https://kichyr.github.io/2019-2-Track-Frontend-K-Chekanov/",
   "description": "Mail.Ru Group Frontend Track course, 2019",
   "author": "Kichyr",
   "dependencies": {
