still fixing gp

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "track-mail-2019-kichyr",
-  "homepage": "https://https://kichyr.github.io/2019-2-Track-Frontend-K-Chekanov/",
-  "description": "Mail.Ru Group Frontend Track course, 2019",
+  "homepage": "https://kichyr.github.io/2019-2-Track-Frontend-K-Chekanov/",
+  "description": "first test app",
+  "version": "0.1.0",
   "author": "Kichyr",
   "dependencies": {
     "@emotion/core": "^10.0.22",
