--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "format": "prettier --write '**/*.{js,jsx,json,md}'",
     "format:changed": "pretty-quick",
     "format:staged": "pretty-quick --staged",
-    "lint": "",
+    "lint": "echo ''",
     "lint:check": "eslint --print-config .eslintrc.json | eslint-config-prettier-check",
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:js": "eslint src/**/*.js -c .eslintrc.json",
