done sending file

--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
     "cross-env": "^6.0.3",
+    "eslint": "^5.12.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-audio-recorder": "^2.2.0",
     "react-dom": "^16.12.0",
     "react-geolocated": "^3.0.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^2.0.0",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^4.4.1",
     "use-position": "0.0.6"
   },
   "devDependencies": {
