--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "react-audio-recorder": "^2.2.0",
     "react-dom": "^16.12.0",
     "react-geolocated": "^3.0.1",
+    "react-hot-loader": "^4.12.18",
+    "react-mic": "^12.4.1",
+    "react-player": "^1.14.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^2.0.0",
     "react-scripts": "^2.1.8",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
@@ -36,8 +40,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
-    "husky": "^3.0.9",
     "gh-pages": "^2.1.1",
+    "husky": "^3.0.9",
     "jscpd": "^2.0.15",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
@@ -49,7 +53,8 @@
     "stylelint-a11y": "^1.2.2",
     "stylelint-config-css-modules": "^1.5.0",
     "stylelint-no-unsupported-browser-features": "^3.0.2",
-    "stylelint-webpack-plugin": "^1.0.3"
+    "stylelint-webpack-plugin": "^1.0.3",
+    "ws": "3.3.2"
   },
   "browserslist": [
     "> 5%",
@@ -86,7 +91,7 @@
     }
   },
   "engines": {
-    "npm": ">=6",
+    "npm": ">=3",
     "node": ">=8"
   }
 }
