--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
     "cross-env": "^6.0.3",
-    "eslint": "^5.12.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -31,8 +30,9 @@
   },
   "devDependencies": {
     "@wemake-services/stylelint-config-scss": "^0.1.4",
+    "babel-jest": "^23.6.0",
     "check-engine": "^1.8.0",
-    "eslint": "^6.6.0",
+    "eslint": "^5.12.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -45,6 +45,7 @@
     "jscpd": "^2.0.15",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
+    "react-audio-player": "^0.11.1",
     "remark-cli": "^7.0.0",
     "remark-lint": "^6.0.5",
     "remark-preset-lint-markdown-style-guide": "^2.1.3",
