--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@wemake-services/stylelint-config-scss": "^0.1.4",
     "babel-jest": "^23.6.0",
     "check-engine": "^1.8.0",
-    "eslint": "^5.12.0",
+    "eslint": "5.12.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-babel": "^5.3.0",
