--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "use-position": "0.0.6"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-links": "^5.3.14",
+    "@storybook/addons": "^5.3.14",
+    "@storybook/preset-create-react-app": "^1.5.2",
+    "@storybook/react": "^5.3.14",
     "@wemake-services/stylelint-config-scss": "^0.1.4",
     "babel-jest": "^23.6.0",
     "check-engine": "^1.8.0",
@@ -45,7 +50,9 @@
     "jscpd": "^2.0.15",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
+    "puppeteer": "^2.1.1",
     "react-audio-player": "^0.11.1",
+    "react-test-renderer": "^16.13.0",
     "remark-cli": "^7.0.0",
     "remark-lint": "^6.0.5",
     "remark-preset-lint-markdown-style-guide": "^2.1.3",
@@ -84,7 +91,9 @@
     "test:engine": "check-engine",
     "test:sec": "npm audit || true",
     "test:unit": "react-scripts test",
-    "ci": "npm run test && npm run build && npm run test:sec"
+    "ci": "npm run test && npm run build && npm run test:sec",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "husky": {
     "hooks": {
