made HW1: added tests and storybook

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^2.0.0",
-    "react-scripts": "^2.1.8",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
@@ -29,6 +28,8 @@
     "use-position": "0.0.6"
   },
   "devDependencies": {
+    "enzyme-adapter-react-15": "^1.4.1",
+    "enzyme-adapter-react-16": "^1.15.2",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-links": "^5.3.14",
     "@storybook/addons": "^5.3.14",
@@ -37,6 +38,8 @@
     "@wemake-services/stylelint-config-scss": "^0.1.4",
     "babel-jest": "^23.6.0",
     "check-engine": "^1.8.0",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.4.4",
     "eslint": "5.12.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
@@ -52,6 +55,7 @@
     "pretty-quick": "^2.0.0",
     "puppeteer": "^2.1.1",
     "react-audio-player": "^0.11.1",
+    "react-scripts": "^2.1.8",
     "react-test-renderer": "^16.13.0",
     "remark-cli": "^7.0.0",
     "remark-lint": "^6.0.5",
@@ -87,7 +91,7 @@
     "lint:css": "stylelint 'src/**/*.{scss,css}' && stylelint --rd 'src/**/*.{scss,css}'",
     "lint:dup": "jscpd -g --threshold=1 tests docker",
     "clean": "rm -rf build",
-    "test": "",
+    "test": "react-scripts test",
     "test:engine": "check-engine",
     "test:sec": "npm audit || true",
     "test:unit": "react-scripts test",
