--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "gh-pages": "^2.1.1",
-    "husky": "^3.0.9",
+    "husky": "^3.1.0",
     "jscpd": "^2.0.15",
+    "jslint": "^0.12.1",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
     "puppeteer": "^2.1.1",
