--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "version": "0.1.0",
   "author": "Kichyr",
   "dependencies": {
+    "@babel/runtime": "^7.9.2",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "babel-jest": "^24.9.0",
     "cross-env": "^6.0.3",
     "enzyme-adapter-react-15": "^1.4.1",
     "enzyme-adapter-react-16": "^1.15.2",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
+    "puppeteer": "^2.1.1",
     "react": "^16.12.0",
     "react-audio-recorder": "^2.2.0",
     "react-dom": "^16.12.0",
@@ -30,17 +33,25 @@
     "use-position": "0.0.6"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/preset-env": "^7.9.0",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-links": "^5.3.14",
     "@storybook/addons": "^5.3.14",
     "@storybook/preset-create-react-app": "^1.5.2",
     "@storybook/react": "^5.3.14",
-    "@wemake-services/stylelint-config-scss": "^0.1.4",
-    "babel-jest": "^23.6.0",
+    "@wemake-services/stylelint-config-scss": "^0.2.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "check-engine": "^1.8.0",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.4.4",
-    "eslint": "5.12.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -50,14 +61,18 @@
     "eslint-plugin-react": "^7.16.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.1.0",
+    "jest": "^24.9.0",
+    "jest-cli": "^25.2.1",
+    "jest-puppeteer": "^3.9.1",
     "jscpd": "^2.0.15",
     "jslint": "^0.12.1",
+    "lodash": "^4.17.15",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
-    "puppeteer": "^2.1.1",
     "react-audio-player": "^0.11.1",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "^3.4.1",
     "react-test-renderer": "^16.13.0",
+    "regenerator-runtime": "^0.13.5",
     "remark-cli": "^7.0.0",
     "remark-lint": "^6.0.5",
     "remark-preset-lint-markdown-style-guide": "^2.1.3",
@@ -77,11 +92,12 @@
     "not dead"
   ],
   "scripts": {
+    "test:endtoend": "jest -c /home/kichyr/TrackMail_2019_1/2019-2-Track-Frontend-K-Chekanov/endtoend/jest.conf.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
+    "eject": "react-scripnode puppeteer_firts_try.jsts eject",
     "format": "prettier --write '**/*.{js,jsx,json,md}'",
     "format:changed": "pretty-quick",
     "format:staged": "pretty-quick --staged",
