--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "puppeteer": "^2.1.1",
     "react": "^16.12.0",
     "react-audio-recorder": "^2.2.0",
     "react-dom": "^16.12.0",
@@ -64,6 +63,7 @@
     "jest": "^24.9.0",
     "jest-cli": "^25.2.1",
     "jest-puppeteer": "^3.9.1",
+    "puppeteer": "^2.1.1",
     "jscpd": "^2.0.15",
     "jslint": "^0.12.1",
     "lodash": "^4.17.15",
@@ -92,7 +92,7 @@
     "not dead"
   ],
   "scripts": {
-    "test:endtoend": "jest -c /home/kichyr/TrackMail_2019_1/2019-2-Track-Frontend-K-Chekanov/endtoend/jest.conf.js",
+    "test:endtoend": "jest -c ./endtoend/jest.conf.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
@@ -108,7 +108,7 @@
     "lint:css": "stylelint 'src/**/*.{scss,css}' && stylelint --rd 'src/**/*.{scss,css}'",
     "lint:dup": "jscpd -g --threshold=1 tests docker",
     "clean": "rm -rf build",
-    "test": "react-scripts test",
+    "test": "react-scripts test & npm run test:endtoend",
     "test:engine": "check-engine",
     "test:sec": "npm audit || true",
     "test:unit": "react-scripts test",
