--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripnode puppeteer_firts_try.jsts eject",
+    "eject": "react-scripts eject",
     "format": "prettier --write '**/*.{js,jsx,json,md}'",
     "format:changed": "pretty-quick",
     "format:staged": "pretty-quick --staged",
