--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.6",
     "react-audio-recorder": "^2.2.0",
-    "react-dev-utils": "^10.2.1",
     "react-dom": "^16.12.0",
     "react-geolocated": "^3.0.1",
     "react-hot-loader": "^4.12.18",
@@ -119,9 +118,11 @@
     "jscpd": "^2.0.15",
     "jslint": "^0.12.1",
     "lodash": "^4.17.15",
+    "node-fetch": "^2.6.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
     "react-audio-player": "^0.11.1",
+    "react-dev-utils": "^10.2.1",
     "react-test-renderer": "^16.13.0",
     "regenerator-runtime": "^0.13.5",
     "remark-cli": "^7.0.0",
