--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@babel/runtime": "^7.9.2",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "@types/d3": "^5.7.2",
+    "@types/d3-geo": "^1.11.1",
     "babel-jest": "^24.9.0",
     "cross-env": "^6.0.3",
+    "d3": "^5.16.0",
+    "d3-geo": "^1.12.0",
     "enzyme-adapter-react-15": "^1.4.1",
     "enzyme-adapter-react-16": "^1.15.2",
     "node-sass": "^4.13.1",
